--- a/src/components/pos/pos.component.html
+++ b/src/components/pos/pos.component.html
@@ -1,10 +1,9 @@
-
 <div class="h-full flex flex-col" (click)="closeContextMenu()">
   <!-- Header -->
   <header class="flex-shrink-0 bg-gray-800 p-4 rounded-t-lg shadow-md z-10">
     <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center gap-4">
       <div class="flex-1">
-        <div class="flex items-center gap-1 bg-gray-900/50 p-1 rounded-lg self-start">
+        <div class="flex flex-wrap items-center gap-2 bg-gray-900/50 p-1 rounded-lg self-start">
           @for(hall of halls(); track hall.id) {
             <button 
               (click)="selectHall(hall)"
@@ -162,4 +161,3 @@
       </ul>
   </div>
 }
-      
