--- a/src/app.component.html
+++ b/src/app.component.html
@@ -1,11 +1,21 @@
 @if (isFullLayoutVisible()) {
   <div class="flex h-screen bg-gray-900 text-gray-100">
-    <app-sidebar></app-sidebar>
+    <!-- Sidebar for Desktop, hidden on mobile -->
+    <div class="hidden md:flex flex-shrink-0">
+      <app-sidebar></app-sidebar>
+    </div>
+
     <main class="flex-1 flex flex-col overflow-hidden">
-      <div class="flex-1 p-4 md:p-6 lg:p-8 overflow-y-auto">
+      <!-- Add padding-bottom on mobile to make space for the nav bar -->
+      <div class="flex-1 p-4 pb-20 md:p-6 lg:p-8 overflow-y-auto">
         <router-outlet></router-outlet>
       </div>
     </main>
+
+    <!-- Bottom Nav for Mobile, hidden on desktop -->
+    <div class="md:hidden">
+      <app-bottom-nav></app-bottom-nav>
+    </div>
   </div>
 } @else {
   <router-outlet></router-outlet>
